--- a/Screen Shot 2017-01-16 at 2.54.43 AM.html
+++ b/Screen Shot 2017-01-16 at 2.54.43 AM.html
@@ -11,7 +11,7 @@
 <body>
   <div class="main">
     <h1>ian moeser</h1>  
-    <p>hi i like dogs and boys</p>
+    <p>hi i like dogs and boys!!!!</p>
     <div id="exercises">
       <h3>Exercises</h3>
       <ul>
