--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div class="main">
     <h1>💖 IAN MOESER 💖</h1>  
     <p>hi i like boys 👬 and clothes 👕</p>
-    <BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="245" height="190">
+    <BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="200" height="200">
     <div id="exercises">
-      <h3>Exercises</h3>
+      <h3>🔮 EXERCISES 🔮</h3>
       <ul>
         <li></li>
         <li></li>
@@ -23,7 +23,7 @@
     </div>
     
     <div id="projects">
-      <h3>Projects</h3>
+      <h3>🎀 PROJECTS 🎀</h3>
       <ul>
         <li></li>
         <li></li>
