--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <div class="main">
     <h1>💖 IAN MOESER 💖</h1>  
     <p>hi i like boys 👬 and 80s music 💿</p>
-    <BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="200" height="200">
-    <br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78?autoplay=1">
+    <br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78">
 </iframe>
     <div id="exercises">
       <h3>🔮 EXERCISES 🔮</h3>
@@ -33,5 +32,6 @@
       </ul>
     </div>
   </div>
+  <BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="200" height="200">
 </body>
 </html>
