--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="main">
+  <center><div class="main">
     <h1>💖 IAN MOESER 💖</h1>  
     <p>hi i like boys 👬 and 80s music 💿</p>
     <br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78">
@@ -32,6 +32,6 @@
       </ul>
     </div>
   </div>
-  <BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="200" height="200">
+  <BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="200" height="200"></center>
 </body>
 </html>
