center god dammit

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-  <center><div class="main">
-    <h1>💖 IAN MOESER 💖</h1>  
-    <p>hi i like boys 👬 and 80s music 💿</p>
-    <br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78">
+ <div class="main">
+    <center><h1>💖 IAN MOESER 💖</h1></center>  
+    <center><p>hi i like boys 👬 and 80s music 💿</p></center>
+    <center><br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78"></center>
 </iframe>
     <div id="exercises">
       <h3>🔮 EXERCISES 🔮</h3>
@@ -32,6 +32,6 @@
       </ul>
     </div>
   </div>
-  <BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="200" height="200"></center>
+  <BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="200" height="200">
 </body>
 </html>
