--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
  <div class="main">
-    <center><h1>💖 IAN MOESER 💖</h1></center>  
-    <center><p>hi i like boys 👬 and 80s music 💿</p></center>
-    <center><br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78"></center>
-</iframe>
+    <center><h1>💖 IAN MOESER 💖</h1>
+    <p>hi i like boys 👬 and 80s music 💿</p>
+   <br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78">
+</iframe></center>
     <div id="exercises">
       <h3>🔮 EXERCISES 🔮</h3>
       <ul>
