--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <p>hi i like boys 👬 and 80s music 💿</p>
    <br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78">
 </iframe></center>
-    <div id="exercises">
+    <center><div id="exercises">
       <h3>🔮 EXERCISES 🔮</h3>
       <ul>
         <li></li>
         <li></li>
         <li></li>
       </ul>
-    </div>
+    </div></center>
     
-    <div id="projects">
+    <center><div id="projects">
       <h3>🎀 PROJECTS 🎀</h3>
       <ul>
         <li></li>
@@ -31,7 +31,7 @@
         <li></li>
       </ul>
     </div>
-  </div>
-  <BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="200" height="200">
+  </div></center>
+  <center><BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="200" height="200"></center>
 </body>
 </html>
