--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
     <center><div id="exercises">
       <h3>🔮 EXERCISES 🔮</h3>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>aaa</li>
+        <li>aaa</li>
+        <li>aaa</li>
       </ul>
     </div></center>
     
     <center><div id="projects">
       <h3>🎀 PROJECTS 🎀</h3>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>aaa</li>
+        <li>aaa</li>
+        <li>aaa</li>
       </ul>
     </div>
   </div></center>
