--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
  <div class="main">
  <!-- Start of SimpleHitCounter Code -->
-<div align="center"><a href="http://www.marcleaningservices.com" target="_blank"><img src="http://simplehitcounter.com/hit.php?uid=2220054&f=16776960&b=16711680" border="0" height="18" width="83" alt=""></a><br><a href="http://www.marcleaningservices.com" target="_blank" style="text-decoration:none;">janitorial service broward</a></div>
+<div align="center"><a href="http://www.marcleaningservices.com" target="_blank"><img src="http://simplehitcounter.com/hit.php?uid=2220054&f=16776960&b=16711680" border="0" height="18" width="83" alt="janitorial service broward"></a><br><a href="http://www.marcleaningservices.com" target="_blank" style="text-decoration:none;"></a></div>
 <!-- End of SimpleHitCounter Code -->
     <center><h1>💖 IAN MOESER 💖</h1>
     <p>hi i like boys 👬 and 80s music 💿</p>
