--- a/index.html
+++ b/index.html
@@ -17,16 +17,40 @@
     <p>hi i like boys 👬 and 80s music 💿</p>
    <br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78">
 </iframe></center>
-    <center><div id="exercises">
+
+
+VISIBLE CONTENT HERE
+<div id="spoiler" style="display:none"> 
+<div id="exercises">
       <h3>🔮 EXERCISES 🔮</h3>
       <ul>
         <li>aaa</li>
         <li>aaa</li>
         <li>aaa</li>
       </ul>
-    </div></center>
+    </div>
     
-    <center><div id="projects">
+    <div id="projects">
+      <h3>🎀 PROJECTS 🎀</h3>
+      <ul>
+        <li>aaa</li>
+        <li>aaa</li>
+        <li>aaa</li>
+      </ul>
+    </div> 
+</div> 
+<button title="Click to show/hide content" type="button" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">projects and exercises</button>
+
+    <div id="exercises">
+      <h3>🔮 EXERCISES 🔮</h3>
+      <ul>
+        <li>aaa</li>
+        <li>aaa</li>
+        <li>aaa</li>
+      </ul>
+    </div>
+    
+    <div id="projects">
       <h3>🎀 PROJECTS 🎀</h3>
       <ul>
         <li>aaa</li>
@@ -34,7 +58,7 @@
         <li>aaa</li>
       </ul>
     </div>
-  </div></center>
+  </div>
   <center><BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="200" height="200"></center>
 </body>
 </html>
