--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 </iframe></center>
 
 
-VISIBLE CONTENT HERE
-<div id="spoiler" style="display:none"> 
+<center><div id="spoiler" style="display:none"> 
 <div id="exercises">
       <h3>🔮 EXERCISES 🔮</h3>
       <ul>
@@ -39,26 +38,9 @@ VISIBLE CONTENT HERE
       </ul>
     </div> 
 </div> 
-<button title="Click to show/hide content" type="button" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">projects and exercises</button>
+<button title="Click to show/hide content" type="button" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">PROJECTS/EXERCISES</button>
 
-    <div id="exercises">
-      <h3>🔮 EXERCISES 🔮</h3>
-      <ul>
-        <li>aaa</li>
-        <li>aaa</li>
-        <li>aaa</li>
-      </ul>
-    </div>
-    
-    <div id="projects">
-      <h3>🎀 PROJECTS 🎀</h3>
-      <ul>
-        <li>aaa</li>
-        <li>aaa</li>
-        <li>aaa</li>
-      </ul>
-    </div>
-  </div>
+  </div></center>
   <center><BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="200" height="200"></center>
 </body>
 </html>
