--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 <div id="exercises">
       <h3>🔮 EXERCISES 🔮</h3>
       <ul>
-        <li>aaa</li>
-        <li>aaa</li>
-        <li>aaa</li>
+        <li></li>
+        <li></li>
+        <li></li>
       </ul>
     </div>
     
     <div id="projects">
       <h3>🎀 PROJECTS 🎀</h3>
       <ul>
-        <li>aaa</li>
-        <li>aaa</li>
-        <li>aaa</li>
+        <li></li>
+        <li></li>
+        <li></li>
       </ul>
     </div> 
 </div> 
-<button title="Click to show/hide content" type="button" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">PROJECTS/EXERCISES</button>
+<button title="Click to show/hide content" type="button" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">🌞 PROJECTS/EXERCISES 🌞</button>
 
   </div></center>
   <center><BR /><img src="https://s25.postimg.org/p7i9b73zz/Tl_XKi_Ui.gif" alt="gif" width="200" height="200"></center>
