--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="projects">
       <h3>🎀 PROJECTS 🎀</h3>
       <ul>
-        <li><a href="presentation/index.html">PRESENTATION</a></li>
+        <center><li><a href="presentation/index.html">PRESENTATION</a></li></center>
         <li></li>
         <li></li>
       </ul>
