--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </iframe></center>
 
 
-<center><div id="spoiler" style="display:none"> 
+<div id="spoiler" style="display:none"> 
 <div id="exercises">
       <h3>🔮 EXERCISES 🔮</h3>
       <ul>
@@ -32,7 +32,7 @@
     <div id="projects">
       <h3>🎀 PROJECTS 🎀</h3>
       <ul>
-        <center><li><a href="presentation/index.html">PRESENTATION</a></li></center>
+        <li><a href="presentation/index.html">PRESENTATION</a></li>
         <li></li>
         <li></li>
       </ul>
