--- a/presentation/index.html
+++ b/presentation/index.html
@@ -23,7 +23,8 @@
 	<br />
 	<a href="https://en.wikipedia.org/wiki/Office_Assistant"><small>MICROSOFT OFFICE ASSISTANT ON WIKIPEDIA</small></a>
 	<br/>
-	<p>REMEMBER THIS ANNOYING ASSHOLE? <strong>ME TOO.</strong></p>
+	<p>REMEMBER THIS ANNOYING ASSHOLE? <strong>ME TOO.</strong></p><br />
+	<a href="index.html">← BACK</a>
 </center>
 </body>
 </html>
