--- a/presentation/index.html
+++ b/presentation/index.html
@@ -24,7 +24,7 @@
 	<a href="https://en.wikipedia.org/wiki/Office_Assistant"><small>MICROSOFT OFFICE ASSISTANT ON WIKIPEDIA</small></a>
 	<br/>
 	<p>REMEMBER THIS ANNOYING ASSHOLE? <strong>ME TOO.</strong></p><br />
-	<a href="/">← BACK</a>
+	<a href="/index.html">← BACK</a>
 </center>
 </body>
 </html>
