--- a/presentation/index.html
+++ b/presentation/index.html
@@ -7,6 +7,9 @@
 <center>
 	<!-- this is a comment, replace the text between the brackets and dashes to help annotate and organize your code -->
 	<h1>HISTORY OF CHAT BUBBLES</h1>
+	
+	<a href="http://www.glitter-graphics.com/myspace/text_generator.php" target=_blank><img src="http://text.glitter-graphics.net/sc/c.gif" border=0><img src="http://text.glitter-graphics.net/sc/h.gif" border=0><img src="http://text.glitter-graphics.net/sc/a.gif" border=0><img src="http://text.glitter-graphics.net/sc/t.gif" border=0><img src="http://dl3.glitter-graphics.net/empty.gif" width=20 border=0><img src="http://text.glitter-graphics.net/sc/b.gif" border=0><img src="http://text.glitter-graphics.net/sc/u.gif" border=0><img src="http://text.glitter-graphics.net/sc/b.gif" border=0><img src="http://text.glitter-graphics.net/sc/b.gif" border=0><img src="http://text.glitter-graphics.net/sc/l.gif" border=0><img src="http://text.glitter-graphics.net/sc/e.gif" border=0><img src="http://text.glitter-graphics.net/sc/s.gif" border=0></a>
+
 	<img src="http://dl.glitter-graphics.com/pub/1457/1457745k8p286od3g.gif">
 	</br> 
 	<p>this webpage is on the history of chat bubbles</p>
