--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <html>
 
 <head>
+<a href="http://www.glitter-graphics.com/myspace/text_generator.php" target=_blank><img src="http://text.glitter-graphics.net/wiggle/i.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/a.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/n.gif" border=0><img src="http://dl3.glitter-graphics.net/empty.gif" width=20 border=0><img src="http://text.glitter-graphics.net/wiggle/m.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/o.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/e.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/s.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/e.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/r.gif" border=0></a>
+<BR />
   <title>💖 IAN MOESER 💖</title>
   <meta charset="utf-8" />
 </head>
