--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <html>
 
 <head>
-<a href="http://www.glitter-graphics.com/myspace/text_generator.php" target=_blank><img src="http://text.glitter-graphics.net/wiggle/i.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/a.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/n.gif" border=0><img src="http://dl3.glitter-graphics.net/empty.gif" width=20 border=0><img src="http://text.glitter-graphics.net/wiggle/m.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/o.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/e.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/s.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/e.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/r.gif" border=0></a>
-<BR />
+
   <title>💖 IAN MOESER 💖</title>
   <meta charset="utf-8" />
 </head>
@@ -15,7 +14,11 @@
  <!-- Start of SimpleHitCounter Code -->
 <div align="center"><a href="http://www.marcleaningservices.com" target="_blank"><img src="http://simplehitcounter.com/hit.php?uid=2220054&f=16776960&b=16711680" border="0" height="18" width="83" alt="janitorial service broward"></a><br><a href="http://www.marcleaningservices.com" target="_blank" style="text-decoration:none;"></a></div>
 <!-- End of SimpleHitCounter Code -->
-    <center><h1>💖 IAN MOESER 💖</h1>
+
+<center>
+<a href="http://www.glitter-graphics.com/myspace/text_generator.php" target=_blank><img src="http://text.glitter-graphics.net/wiggle/i.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/a.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/n.gif" border=0><img src="http://dl3.glitter-graphics.net/empty.gif" width=20 border=0><img src="http://text.glitter-graphics.net/wiggle/m.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/o.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/e.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/s.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/e.gif" border=0><img src="http://text.glitter-graphics.net/wiggle/r.gif" border=0></a>
+<br />
+<h1>💖 IAN MOESER 💖</h1>
     <p>hi i like boys 👬 and 80s music 💿</p>
    <br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78">
 </iframe></center>
