added photos to IMG folder, edited first section

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -12,13 +12,10 @@
 <br />
 	<p>this webpage is on the history of chat bubbles</p>
 
-	<img src="img/worlds-first-text-message.jpg" />
-	<br />
-
-	<a href="https://en.wikipedia.org/wiki/Text_messaging"><small>TEXT MESSAGING ON WIKIPEDIA</small></a>
+	<img src="img/ChatBubblesThroughHistory.png" />
 	<br />
 	
-	<p>TEXTING IS FUN AND ELIMINATES THE NEED FOR REAL LIFE HUMAN INTERACTION. <strong>AWESOME!</strong></p>
+	<p>WHEN WORKING ON ICHAT FOR APPLE, JENS ALFKE TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION</p>
 
 	<img src="img/IC284957.jpg" />
 	<br />
