--- a/presentation/index.html
+++ b/presentation/index.html
@@ -15,7 +15,7 @@
 	<img src="img/ChatBubblesThroughHistory.png" />
 	<br />
 	
-	<p>WHEN WORKING ON ICHAT FOR APPLE, JENS ALFKE TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION</p>
+	<p>WHEN WORKING ON ICHAT FOR APPLE, JENS ALFKE TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION:)</p>
 
 	<img src="img/IC284957.jpg" />
 	<br />
