still...wont...work

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -12,7 +12,7 @@
 <br />
 	<p>this webpage is on the history of chat bubbles</p>
 
-	<img src="img/ChatBubblesThroughHistory.png" />
+	<img src="img/ChatBubblesThroughHistory.jpg" />
 	<br />
 	
 	<p>WHEN WORKING ON ICHAT FOR APPLE, JENS ALFKE TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION</p>
