--- a/presentation/index.html
+++ b/presentation/index.html
@@ -10,12 +10,14 @@
 
 	<a href="http://www.glitter-graphics.com/myspace/text_generator.php" target=_blank><img src="http://text.glitter-graphics.net/sc/c.gif" border=0><img src="http://text.glitter-graphics.net/sc/h.gif" border=0><img src="http://text.glitter-graphics.net/sc/a.gif" border=0><img src="http://text.glitter-graphics.net/sc/t.gif" border=0><img src="http://dl3.glitter-graphics.net/empty.gif" width=20 border=0><img src="http://text.glitter-graphics.net/sc/b.gif" border=0><img src="http://text.glitter-graphics.net/sc/u.gif" border=0><img src="http://text.glitter-graphics.net/sc/b.gif" border=0><img src="http://text.glitter-graphics.net/sc/b.gif" border=0><img src="http://text.glitter-graphics.net/sc/l.gif" border=0><img src="http://text.glitter-graphics.net/sc/e.gif" border=0><img src="http://text.glitter-graphics.net/sc/s.gif" border=0></a>
 <br />
-	<p>this webpage is on the history of chat bubbles</p>
-
+	<img src="https://media.giphy.com/media/OgRQGJ3dbuz8A/giphy.gif" />
+<br/>
+<p>THIS WEBPAGE TALKS BRIEFLY ON THE HISTORY AND USAGE OF CHAT BUBBLE UI
 	<img src="img/ChatBubblesThroughHistory.jpg" />
 	<br />
+	<small>SOME EXAMPLES OF EARLY CHAT BUBBLE UI UP TO IMESSAGE ON THE FIRST IPHONE</small>
 	
-	<p>WHEN WORKING ON ICHAT FOR APPLE, JENS ALFKE TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION</p>
+	<p>WHEN WORKING ON ICHAT FOR APPLE, JENS ALFKE TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION. </p>
 
 	<img src="img/IC284957.jpg" />
 	<br />
