--- a/presentation/index.html
+++ b/presentation/index.html
@@ -12,7 +12,7 @@
 <br />
 	<img src="https://media.giphy.com/media/OgRQGJ3dbuz8A/giphy.gif" />
 <br/>
-<p>THIS WEBPAGE TALKS BRIEFLY ON THE HISTORY AND USAGE OF CHAT BUBBLE UI
+<p>THIS WEBPAGE TALKS BRIEFLY ON THE HISTORY AND USAGE OF CHAT BUBBLE UI (SORRY KELLY UNFORTUNATELY YOU CANNOT TEXT ON EXCEL)
 	<img src="img/ChatBubblesThroughHistory.jpg" />
 	<br />
 	<small>SOME EXAMPLES OF EARLY CHAT BUBBLE UI UP TO IMESSAGE ON THE FIRST IPHONE</small>
