if u put the <small> tag twice does it double the effect? we'll see

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -16,7 +16,7 @@
 <br />
 	<img src="img/ChatBubblesThroughHistory.jpg" />
 	<br />
-	<small>SOME EXAMPLES OF EARLY CHAT BUBBLE UI UP TO IMESSAGE ON THE FIRST IPHONE</small>
+	<small><small>SOME EXAMPLES OF EARLY CHAT BUBBLE UI UP TO IMESSAGE ON THE FIRST IPHONE</small></small>
 	
 	<p>WHEN WORKING ON ICHAT FOR APPLE, JENS ALFKE TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION. </p>
 
