--- a/presentation/index.html
+++ b/presentation/index.html
@@ -14,17 +14,19 @@
 <br/>
 <p>THIS WEBPAGE TALKS BRIEFLY ON THE HISTORY AND USAGE OF CHAT BUBBLE UI (SORRY KELLY UNFORTUNATELY YOU CANNOT TEXT ON EXCEL)</p>
 <br />
+<!-- BEGIN CODE FOR SECTION -->
 	<img src="img/ChatBubblesThroughHistory.jpg" />
-	<br />
-	<small><small>SOME EXAMPLES OF EARLY CHAT BUBBLE UI UP TO IMESSAGE ON THE FIRST IPHONE</small></small>
+    <br />
+<small><small>SOME EXAMPLES OF EARLY CHAT BUBBLE UI UP TO IMESSAGE ON THE FIRST IPHONE</small></small>
 	
-	<p>WHEN WORKING ON ICHAT FOR APPLE, JENS ALFKE TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION. </p>
-
-	<img src="img/IC284957.jpg" />
+<p>WHEN WORKING ON ICHAT FOR APPLE, JENS ALFKE TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION. </p>
 	<br />
-	<a href="https://en.wikipedia.org/wiki/Office_Assistant"><small>MICROSOFT OFFICE ASSISTANT ON WIKIPEDIA</small></a>
-	<br/>
-	<p>REMEMBER THIS ANNOYING ASSHOLE? <strong>ME TOO.</strong></p><br />
+<!-- BEGIN CODE FOR SECTION -->
+	<img src="img/DifferentChatUI.jpg" />
+	<br />
+	<small><small>IOS, WINDOWS, AND ANDROID TEXT UI</small></small>
+	
+	<p>WITH THE INTRODUCTION OF SMART PHONES, THE CHAT BUBBLE WAS IMPLEMENTED INTO MOST BRANDS' SMS APPLICATIONS</p><br />
 	<a href="/interactive1"><small>← BACK</small></a>
 </center>
 </body>
