--- a/presentation/index.html
+++ b/presentation/index.html
@@ -9,10 +9,10 @@
 	
 
 	<a href="http://www.glitter-graphics.com/myspace/text_generator.php" target=_blank><img src="http://text.glitter-graphics.net/sc/c.gif" border=0><img src="http://text.glitter-graphics.net/sc/h.gif" border=0><img src="http://text.glitter-graphics.net/sc/a.gif" border=0><img src="http://text.glitter-graphics.net/sc/t.gif" border=0><img src="http://dl3.glitter-graphics.net/empty.gif" width=20 border=0><img src="http://text.glitter-graphics.net/sc/b.gif" border=0><img src="http://text.glitter-graphics.net/sc/u.gif" border=0><img src="http://text.glitter-graphics.net/sc/b.gif" border=0><img src="http://text.glitter-graphics.net/sc/b.gif" border=0><img src="http://text.glitter-graphics.net/sc/l.gif" border=0><img src="http://text.glitter-graphics.net/sc/e.gif" border=0><img src="http://text.glitter-graphics.net/sc/s.gif" border=0></a>
-<br />
+<br /><br />
 	<img height="195" width="300" src="https://media.giphy.com/media/OgRQGJ3dbuz8A/giphy.gif" />
 <br/>
-<p>THIS WEBPAGE TALKS BRIEFLY ON THE HISTORY AND USAGE OF CHAT BUBBLE UI (SORRY KELLY UNFORTUNATELY YOU CANNOT TEXT ON EXCEL)</p>
+<p>THIS WEBPAGE TALKS BRIEFLY ON THE HISTORY AND USAGE OF CHAT BUBBLE UI</p>
 <br />
 <!-- BEGIN CODE FOR SECTION -->
 	<img src="img/ChatBubblesThroughHistory.jpg" />
