--- a/presentation/index.html
+++ b/presentation/index.html
@@ -19,14 +19,14 @@
     <br />
 <small><small>SOME EXAMPLES OF EARLY CHAT BUBBLE UI UP TO IMESSAGE ON THE FIRST IPHONE</small></small>
 	
-<p>WHEN WORKING ON ICHAT FOR APPLE, JENS ALFKE TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION. </p>
+<p>WHEN WORKING ON ICHAT FOR APPLE, JENS ALFKE TURNED TO SPEECH BUBBLES <br />TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION. </p>
 	<br />
 <!-- BEGIN CODE FOR SECTION -->
 	<img src="img/DifferentChatUI.jpg" />
 	<br />
 	<small><small>IOS, WINDOWS, AND ANDROID TEXT UI</small></small>
 	
-	<p>WITH THE INTRODUCTION OF SMART PHONES, THE CHAT BUBBLE WAS IMPLEMENTED INTO MOST BRANDS' SMS APPLICATIONS</p><br />
+	<p>WITH THE INTRODUCTION OF SMART PHONES, THE CHAT BUBBLE WAS <br />IMPLEMENTED INTO MOST BRANDS' SMS APPLICATIONS</p><br />
 	<a href="/interactive1"><small>← BACK</small></a>
 </center>
 </body>
