--- a/presentation/index.html
+++ b/presentation/index.html
@@ -26,7 +26,7 @@
 	<br />
 	<small><small>IOS, WINDOWS, AND ANDROID TEXT UI</small></small>
 	
-	<p>WITH THE INTRODUCTION OF SMART PHONES, THE CHAT BUBBLE WAS <br />IMPLEMENTED INTO MOST BRANDS' SMS APPLICATIONS</p><br />
+	<p>WITH THE INTRODUCTION OF SMART PHONES, THE CHAT BUBBLE WAS <br />IMPLEMENTED INTO MOST BRANDS' SMS APPLICATIONS.</p><br />
 	<a href="/interactive1"><small>← BACK</small></a>
 </center>
 </body>
