--- a/presentation/index.html
+++ b/presentation/index.html
@@ -26,7 +26,15 @@
 	<br />
 	<small><small>IOS, WINDOWS, AND ANDROID TEXT UI</small></small>
 	
-	<p>WITH THE INTRODUCTION OF SMART PHONES, THE CHAT BUBBLE WAS IMPLEMENTED INTO MOST BRANDS' SMS APPLICATIONS. REPLACING THE OUTDATED EMAIL STYLED SMS STYLE MOST PHONES USED.</p><br />
+	<p>WITH THE INTRODUCTION OF SMART PHONES, THE CHAT BUBBLE WAS IMPLEMENTED INTO MOST BRANDS' SMS APPLICATIONS.</p><br />
+	<br />
+<!-- BEGIN CODE FOR SECTION -->
+	<img src="img/ManyFunctions.gif" />
+	<br />
+	<small><small>THE CHAT BUBBLE TAKING ON NEW FORMS</small></small>
+	
+	<p>MORE RECENTLY WITH THE RELEASE OF APPLE'S MOST RECENT IOS. CHAT BUBBLES CAN NOW DO MUCH MORE THAN JUST RELAY TEXT.</p><br />
+	
 	<a href="/interactive1"><small>← BACK</small></a>
 </center>
 </body>
