--- a/presentation/index.html
+++ b/presentation/index.html
@@ -34,7 +34,12 @@
 	<small><small>THE CHAT BUBBLE TAKING ON NEW FORMS</small></small>
 	
 	<p>MORE RECENTLY WITH THE RELEASE OF APPLE'S MOST RECENT IOS. CHAT BUBBLES CAN NOW DO MUCH MORE THAN JUST RELAY TEXT.</p><br />
+	<!-- BEGIN CODE FOR SECTION -->
+	<img src="img/TypesOfBubbles.png" />
+	<br />
+	<small><small>3RD PARTY APPS HAVE ADOPTED THE MULTI-FUNCTIONAL CHAT BUBBLE</small></small>
 	
+	<p>TODAY, IT'S HARD NOT TO SEE CHAT BUBBLES IMPLETEMENTED INTO APPLICATIONS. </p><br />
 	<a href="/interactive1"><small>← BACK</small></a>
 </center>
 </body>
