--- a/presentation/index.html
+++ b/presentation/index.html
@@ -33,7 +33,7 @@
 	<br />
 	<small><small>THE CHAT BUBBLE TAKING ON NEW FORMS</small></small>
 	
-	<p>MORE RECENTLY WITH THE RELEASE OF APPLE'S MOST RECENT IOS. CHAT BUBBLES CAN NOW DO MUCH MORE THAN JUST RELAY TEXT.</p><br />
+	<p>MORE RECENTLY, WITH THE RELEASE OF APPLE'S MOST RECENT IOS. CHAT BUBBLES CAN NOW DO MUCH MORE THAN JUST RELAY TEXT.</p><br />
 	<!-- BEGIN CODE FOR SECTION -->
 	<img src="img/TypesOfBubbles.png" />
 	<br />
