--- a/presentation/index.html
+++ b/presentation/index.html
@@ -33,9 +33,9 @@
 	<br />
 	<small><small>THE CHAT BUBBLE TAKING ON NEW FORMS</small></small>
 	
-	<p>MORE RECENTLY, WITH THE RELEASE OF APPLE'S MOST RECENT IOS. CHAT BUBBLES CAN NOW DO MUCH MORE THAN JUST RELAY TEXT.</p><br />
+	<p>MORE RECENTLY WITH THE RELEASE OF APPLE'S MOST RECENT IOS. CHAT BUBBLES CAN NOW DO MUCH MORE THAN JUST RELAY TEXT.</p><br />
 	<!-- BEGIN CODE FOR SECTION -->
-	<img src="img/TypesOfBubbles.png" />
+	<img src="img/bubblesuses.jpg" />
 	<br />
 	<small><small>3RD PARTY APPS HAVE ADOPTED THE MULTI-FUNCTIONAL CHAT BUBBLE</small></small>
 	
