--- a/presentation/index.html
+++ b/presentation/index.html
@@ -15,6 +15,12 @@
 <p>THIS WEBPAGE TALKS BRIEFLY ON THE HISTORY AND USAGE OF CHAT BUBBLE UI</p>
 <br />
 <!-- BEGIN CODE FOR SECTION -->
+	<img src="img/OGBubbles" />
+	<br />
+	<small><small>DIFFERENT VARIATIONS OF THE ICONIC SPEECH BUBBLE</small></small>
+	
+	<p>MOST PEOPLE WOULD RECOGNIZE A SPEECH BUBBLE WHEN THEY SEE ONE, OFTEN USED IN COMIC BOOKS AND OTHER ILLUSTRATIONS TO SHOW THAT SOMEBODY IS SPEAKING. WHILE ALSO ALLOWING FOR CONVERSATIONS TO BE READ EASIER.</p><br />
+<!-- BEGIN CODE FOR SECTION -->
 	<img src="img/ChatBubblesThroughHistory.jpg" />
     <br />
 <small><small>SOME EXAMPLES OF EARLY CHAT BUBBLE UI UP TO IMESSAGE ON THE FIRST IPHONE</small></small>
