--- a/presentation/index.html
+++ b/presentation/index.html
@@ -15,7 +15,7 @@
 <p>THIS WEBPAGE TALKS BRIEFLY ON THE HISTORY AND USAGE OF CHAT BUBBLE UI</p>
 <br />
 <!-- BEGIN CODE FOR SECTION -->
-	<img src="img/OGBubbles.jpg" />
+	<img src="img/OGbubbles.jpg" />
 	<br />
 	<small><small>DIFFERENT VARIATIONS OF THE ICONIC SPEECH BUBBLE</small></small>
 	
