--- a/presentation/index.html
+++ b/presentation/index.html
@@ -19,7 +19,18 @@
 	<br />
 	<small><small>DIFFERENT VARIATIONS OF THE ICONIC SPEECH BUBBLE</small></small>
 	
-	<p>MOST PEOPLE WOULD RECOGNIZE A SPEECH BUBBLE WHEN THEY SEE ONE, OFTEN USED IN COMIC BOOKS AND OTHER ILLUSTRATIONS TO SHOW THAT SOMEBODY IS SPEAKING. WHILE ALSO ALLOWING FOR CONVERSATIONS TO BE READ EASIER.</p><br />
+	<p>OFTEN USED IN COMIC BOOKS TO SHOW THAT SOMEBODY IS SPEAKING. WHILE ALSO ALLOWING FOR CONVERSATIONS TO BE READ EASIER.</p><br />
+<!-- BEGIN CODE FOR SECTION -->
+<img src="img/assistant.jpg" />
+<br/>
+<small><small>OMG THIS THING WAS SO ANNOYING.</small></small>
+<p>CHAT BUBBLES WERE SEEN A LOT IN THE EARLY INTERNET AND ON EARLY COMPUTER PROGRAMS
+<br />
+<!-- BEGIN CODE FOR SECTION -->
+<img src="img/AIM.gif" />
+<br/>
+<small><small>AOL INSTANT MESSENGER</small></small>
+<p>CHAT BUBBLES CAN HELP A CONVERSATION MOVE MORE SMOOTHLY. NOTICE HOW JUMBLED TEXT CAN GET IN PROGRAMS SUCH AS AIM.
 <!-- BEGIN CODE FOR SECTION -->
 	<img src="img/ChatBubblesThroughHistory.jpg" />
     <br />
