--- a/presentation/index.html
+++ b/presentation/index.html
@@ -24,13 +24,14 @@
 <img src="img/assistant.jpg" />
 <br/>
 <small><small>OMG THIS THING WAS SO ANNOYING.</small></small>
-<p>CHAT BUBBLES WERE SEEN A LOT IN THE EARLY INTERNET AND ON EARLY COMPUTER PROGRAMS
+<p>CHAT BUBBLES WERE SEEN A LOT IN THE EARLY INTERNET AND ON EARLY COMPUTER PROGRAMS</p>
 <br />
 <!-- BEGIN CODE FOR SECTION -->
 <img src="img/AIM.gif" />
 <br/>
 <small><small>AOL INSTANT MESSENGER</small></small>
-<p>CHAT BUBBLES CAN HELP A CONVERSATION MOVE MORE SMOOTHLY. NOTICE HOW JUMBLED TEXT CAN GET IN PROGRAMS SUCH AS AIM.
+<p>CHAT BUBBLES CAN HELP A CONVERSATION MOVE MORE SMOOTHLY. NOTICE HOW JUMBLED TEXT CAN GET IN PROGRAMS SUCH AS AIM.</p>
+<br />
 <!-- BEGIN CODE FOR SECTION -->
 	<img src="img/ChatBubblesThroughHistory.jpg" />
     <br />
