--- a/presentation/index.html
+++ b/presentation/index.html
@@ -24,7 +24,7 @@
 <img src="img/assistant.jpg" />
 <br/>
 <small><small>OMG THIS THING WAS SO ANNOYING.</small></small>
-<p>CHAT BUBBLES WERE SEEN A LOT IN THE EARLY INTERNET AND ON EARLY COMPUTER PROGRAMS</p>
+<p>CHAT BUBBLES WERE SEEN A LOT IN THE EARLY INTERNET AND ON EARLY COMPUTER PROGRAMS.</p>
 <br />
 <!-- BEGIN CODE FOR SECTION -->
 <img src="img/AIM.gif" />
@@ -58,6 +58,22 @@
 	<small><small>3RD PARTY APPS HAVE ADOPTED THE MULTI-FUNCTIONAL CHAT BUBBLE</small></small>
 	
 	<p>TODAY, IT'S HARD NOT TO SEE CHAT BUBBLES IMPLETEMENTED INTO APPLICATIONS. </p><br />
+
+	<!-- BEGIN CODE FOR SECTION -->
+<img src="img/robot.jpg" />
+<br/>
+<small><small>CHAT BUBBLES BEING USED BY BOTS TO GUIDE THE USER</small></small>
+<br />
+
+<img src="img/OLDTEXT.jpg" />
+<br/>
+<small><small>EARLY TEXT MESSAGE UI MIMICED THAT OF EMAILS</small></small>
+<br />
+
+<img src="img/palacechat.jpg" />
+<br/>
+<small><small>THE PALACE</small></small>
+<!-- BEGIN CODE FOR SECTION -->
 	<a href="/interactive1"><small>← BACK</small></a>
 </center>
 </body>
