--- a/presentation/index.html
+++ b/presentation/index.html
@@ -67,13 +67,13 @@
 
 <img src="img/OLDTEXT.jpg" />
 <br/>
-<small><small>EARLY TEXT MESSAGE UI MIMICED THAT OF EMAILS</small></small>
+<small><small>EARLY TEXT MESSAGE UI MIMICKED THAT OF EMAILS</small></small>
 <br />
 
 <img src="img/palacechat.jpg" />
 <br/>
 <small><small>THE PALACE</small></small>
-<!-- BEGIN CODE FOR SECTION -->
+<br />
 	<a href="/interactive1"><small>← BACK</small></a>
 </center>
 </body>
