--- a/presentation/index.html
+++ b/presentation/index.html
@@ -64,15 +64,19 @@
 <br/>
 <small><small>CHAT BUBBLES BEING USED BY BOTS TO GUIDE THE USER</small></small>
 <br />
-
+<br />
 <img src="img/OLDTEXT.jpg" />
 <br/>
 <small><small>EARLY TEXT MESSAGE UI MIMICKED THAT OF EMAILS</small></small>
 <br />
-
+<br />
 <img src="img/palacechat.jpg" />
 <br/>
 <small><small>THE PALACE</small></small>
+<br />
+<img src="img/firsttextmessage.jpg" />
+<br/>
+<small><small>SUPPOSED FIRST TEXT MESSAGE SENT ON IPHONE</small></small>
 <br />
 	<a href="/interactive1"><small>← BACK</small></a>
 </center>
