--- a/presentation/index.html
+++ b/presentation/index.html
@@ -21,6 +21,12 @@
 	
 	<p>OFTEN USED IN COMIC BOOKS TO SHOW THAT SOMEBODY IS SPEAKING. WHILE ALSO ALLOWING FOR CONVERSATIONS TO BE READ EASIER.</p><br />
 <!-- BEGIN CODE FOR SECTION -->
+	<img src="img/comics.jpg" />
+	<br />
+	<small><small>COMIC BOOK LAYOUT</small></small>
+	
+	<p>SPEECH BUBBLES MADE IT EASIER TO DISTINGUISH DIALOGUE FROM OTHER TEXT</p><br />
+<!-- BEGIN CODE FOR SECTION -->
 <img src="img/assistant.jpg" />
 <br/>
 <small><small>OMG THIS THING WAS SO ANNOYING.</small></small>
@@ -74,9 +80,15 @@
 <br/>
 <small><small>THE PALACE</small></small>
 <br />
+<br />
 <img src="img/firsttextmessage.jpg" />
 <br/>
 <small><small>SUPPOSED FIRST TEXT MESSAGE SENT ON IPHONE</small></small>
+<br />
+<br />
+<img src="img/sketches.png" />
+<br/>
+<small><small>JENS ALFKE CONCEPT SKETCHES</small></small>
 <br />
 	<a href="/interactive1"><small>← BACK</small></a>
 </center>
