--- a/presentation/index.html
+++ b/presentation/index.html
@@ -29,7 +29,7 @@
 <!-- BEGIN CODE FOR SECTION -->
 <img src="img/assistant.jpg" />
 <br/>
-<small><small>OMG THIS THING WAS SO ANNOYING.</small></small>
+<small><small>OMG THIS THING WAS <strong>SO ANNOYING</strong>.</small></small>
 <p>CHAT BUBBLES WERE SEEN A LOT IN THE EARLY INTERNET AND ON EARLY COMPUTER PROGRAMS.</p>
 <br />
 <!-- BEGIN CODE FOR SECTION -->
@@ -43,7 +43,7 @@
     <br />
 <small><small>SOME EXAMPLES OF EARLY CHAT BUBBLE UI UP TO IMESSAGE ON THE FIRST IPHONE</small></small>
 	
-<p>WHEN WORKING ON ICHAT FOR APPLE, JENS ALFKE TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION. </p>
+<p>WHEN WORKING ON ICHAT FOR APPLE, <a href="http://jens.mooseyard.com/">JENS ALFKE</a> TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION. </p>
 	<br />
 <!-- BEGIN CODE FOR SECTION -->
 	<img src="img/DifferentChatUI.jpg" />
