--- a/presentation/index.html
+++ b/presentation/index.html
@@ -86,6 +86,11 @@
 <small><small>SUPPOSED FIRST TEXT MESSAGE SENT ON IPHONE</small></small>
 <br />
 <br />
+<img src="img/blackberry.jpg" />
+<br/>
+<small><small>BLACKBEERY TEXT UI</small></small>
+<br />
+<br />
 <img src="img/sketches.png" />
 <br/>
 <small><small>JENS ALFKE CONCEPT SKETCHES</small></small>
