--- a/presentation/index.html
+++ b/presentation/index.html
@@ -96,7 +96,7 @@
 <small><small>JENS ALFKE CONCEPT SKETCHES</small></small>
 <br />
 <br />
-<iframe width="420" height="345" src="https://www.youtube.com/watch?v=rHbCK3ETweQ">
+<iframe width="420" height="345" src="https://www.youtube.com/embed/rHbCK3ETweQ">
 </iframe>
 </br>
 	<a href="/interactive1"><small>← BACK</small></a>
