--- a/presentation/index.html
+++ b/presentation/index.html
@@ -100,7 +100,9 @@
 </iframe>
 <br />
 <small><small>EMAIL MY HEART BY BRITNEY SPEARS</small></small>
-</br>
+<br />
+	<img height="80" width="80" src="http://rsmg.pbsrc.com/albums/v232/korn0818/ATRL_Smilies_All/random/cat_zpsebvh5uip.png~c200" />
+<br />
 	<a href="/interactive1"><small>← BACK</small></a>
 </center>
 </body>
