--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div align="center"><a href="http://www.marcleaningservices.com" target="_blank"><img src="http://simplehitcounter.com/hit.php?uid=2220054&f=16776960&b=16711680" border="0" height="18" width="83" alt="janitorial service broward"></a><br><a href="http://www.marcleaningservices.com" target="_blank" style="text-decoration:none;"></a></div>
 <!-- End of SimpleHitCounter Code -->
 
-<center><h1>💖 IAN MOESER 💖</h1>
+<center><h1>💖 <font color=#ff0000>I</font><font color=#e54b19>A</font><font color=#cc8f33>N</font> <font color=#99ed66>M</font><font color=#7ffe7f>O</font><font color=#66f899>E</font><font color=#4cdcb2>S</font><font color=#33accc>E</font><font color=#196ce5>R</font> 💖</h1>
     <p>hi i like boys 👬 and 80s music 💿</p>
    <br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78">
 </iframe></center>
