--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <center><div id="spoiler" style="display:none"> 
 <div id="exercises">
       <h3><u>🔮 EXERCISES 🔮</u></h3>
-      <p>none yet woot</p>
+      <p>none yet woo</p>
     </div>
     
     <div id="projects">
