--- a/presentation/index.html
+++ b/presentation/index.html
@@ -46,12 +46,19 @@
 <p>WHEN WORKING ON ICHAT FOR APPLE, <a href="http://jens.mooseyard.com/">JENS ALFKE</a> TURNED TO SPEECH BUBBLES TO VISUALIZE THE CHATS HAPPENING WITHIN THE APPLICATION. </p>
 	<br />
 <!-- BEGIN CODE FOR SECTION -->
+<BR />
 	<img src="img/DifferentChatUI.jpg" />
 	<br />
 	<small><small>IOS, WINDOWS, AND ANDROID TEXT UI</small></small>
 	
 	<p>WITH THE INTRODUCTION OF SMART PHONES, THE CHAT BUBBLE WAS IMPLEMENTED INTO MOST BRANDS' SMS APPLICATIONS.</p><br />
 	<br />
+<!-- BEGIN CODE FOR SECTION -->
+<br />
+<img src="img/OLDTEXT.jpg" />
+<br/>
+<small><small>EARLY TEXT MESSAGE UI MIMICKED THAT OF EMAILS</small></small>
+<br />
 <!-- BEGIN CODE FOR SECTION -->
 	<img src="img/ManyFunctions.gif" />
 	<br />
@@ -70,31 +77,31 @@
 <br/>
 <small><small>CHAT BUBBLES BEING USED BY BOTS TO GUIDE THE USER</small></small>
 <br />
-<br />
-<img src="img/OLDTEXT.jpg" />
-<br/>
-<small><small>EARLY TEXT MESSAGE UI MIMICKED THAT OF EMAILS</small></small>
-<br />
+<!-- BEGIN CODE FOR SECTION -->
 <br />
 <img src="img/palacechat.jpg" />
 <br/>
 <small><small>THE PALACE</small></small>
 <br />
+<!-- BEGIN CODE FOR SECTION -->
 <br />
 <img src="img/firsttextmessage.jpg" />
 <br/>
 <small><small>SUPPOSED FIRST TEXT MESSAGE SENT ON IPHONE</small></small>
 <br />
+<!-- BEGIN CODE FOR SECTION -->
 <br />
 <img src="img/blackberry.jpg" />
 <br/>
 <small><small>BLACKBEERY TEXT UI</small></small>
 <br />
+<!-- BEGIN CODE FOR SECTION -->
 <br />
 <img src="img/sketches.png" />
 <br/>
 <small><small>JENS ALFKE CONCEPT SKETCHES</small></small>
 <br />
+<!-- BEGIN CODE FOR SECTION -->
 <br />
 <iframe width="420" height="345" src="https://www.youtube.com/embed/rHbCK3ETweQ">
 </iframe>
