--- a/presentation/index.html
+++ b/presentation/index.html
@@ -12,7 +12,8 @@
 <br /><br />
 	<img height="195" width="300" src="https://media.giphy.com/media/OgRQGJ3dbuz8A/giphy.gif" />
 <br/>
-<p>THIS WEBPAGE TALKS BRIEFLY ON THE HISTORY AND USAGE OF CHAT BUBBLE UI</p>
+<p>THIS WEBPAGE TALKS BRIEFLY ON THE HISTORY AND USAGE OF CHAT BUBBLE UI</p><br />
+<p>(SORRY KELLY BUT U CAN'T TEXT THROUGH EXCEL)</p>
 <br />
 <!-- BEGIN CODE FOR SECTION -->
 	<img src="img/OGbubbles.jpg" />
