--- a/presentation/index.html
+++ b/presentation/index.html
@@ -13,7 +13,7 @@
 	<img height="195" width="300" src="https://media.giphy.com/media/OgRQGJ3dbuz8A/giphy.gif" />
 <br/>
 <p>THIS WEBPAGE TALKS BRIEFLY ON THE HISTORY AND USAGE OF CHAT BUBBLE UI</p><br />
-<p>(SORRY KELLY BUT U CAN'T TEXT THROUGH EXCEL)</p>
+(SORRY KELLY BUT U CAN'T TEXT THROUGH EXCEL)
 <br />
 <!-- BEGIN CODE FOR SECTION -->
 	<img src="img/OGbubbles.jpg" />
