--- a/Creating Taxonomy/index.html
+++ b/Creating Taxonomy/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <center>
-<H1>TAXIDERMY</H1>
+<H1>TAXIDERMY LOL</H1>
 <img src="img/NormalToAbstract.jpg" />
 <br />
 <img src="img/SimpleToComplex.jpg" />
