--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-
-
 <!DOCTYPE html>
 <html>
 
 <head>
-
   <title>💖 IAN MOESER 💖</title>
   <meta charset="utf-8" />
+<link rel="stylesheet" type="text/css" href=“CSS/main.css">
+
 </head>
 
 <body>
