--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>💖 IAN MOESER 💖</title>
   <meta charset="utf-8" />
-<link rel="stylesheet" type="text/css" href=“CSS/main.css">
+<link rel="stylesheet" type="text/css" href="CSS/main.css">
 
 </head>
 
