--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
 <center><div id="spoiler" style="display:none"> 
 <div id="exercises">
-      <h3><u>🔮 EXERCISES 🔮</u></h3>
+      <h3 style="font-family: Courier"><u>🔮 EXERCISES 🔮</u></h3>
       <a href="Creating Taxonomy/index.html">TAXONOMIES</a>
     </div>
     
     <div id="projects">
-      <h3><u>🎀 PROJECTS 🎀</u></h3>
+      <h3 style="font-family: Courier"><u>🎀 PROJECTS 🎀</u></h3>
       <a href="presentation/index.html">PRESENTATION</a>
       
     </div> 
