--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <div class="main">
 
 <center><h1 style="font-family: Courier; color: #F5B6C8;">💖 IAN MOESER 💖</h1>
-    <p style="font-family: Courier">hi i like boys 👬 and 80s music 💿</p>
+    <p style="font-family: Courier color: #F5B6C8;">hi i like boys 👬 and 80s music 💿</p>
    <br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78">
 </iframe></center>
 <br />
