--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
  <div class="main">
-
+<div id="content">
 <center><h1 style="font-family: Courier; color: #F5B6C8;">💖 IAN MOESER 💖</h1>
     <p style="font-family: Courier; color: #F5B6C8;">hi i like boys 👬 and 80s music 💿</p>
    <br /><iframe width="420" height="345" src="https://www.youtube.com/embed/w6Q3mHyzn78">
-</iframe></center>
+</iframe></center></div>
 <br />
 
 <center><div id="spoiler" style="display:none"> 
