--- a/Isolated elements/index.html
+++ b/Isolated elements/index.html
@@ -4,39 +4,41 @@
 <head>
   <title>UI ELEMENTS!!!</title>
   <meta charset="utf-8" />
-<link rel="stylesheet" type="text/css" href="CSS/isolatedelements.css">
+<link rel="stylesheet" type="text/css" href="../CSS/isolatedelements.css">
 
 </head>
 
 <body>
-<!-- START IMAGE ONE -->
-<div id="abstract">
-<img src="IMG/abstract.jpg">
+<!-- START BOX ONE -->
+<div id="Box1">
+<div class="text"><h1>💖 BOX 1 💖</h1></div>
+<div class="abstract">
+<img src="IMG/abstract.jpg"></div>
+<div class="doodle">
+<img src="IMG/doodle.jpg"></div>
 </div>
-<!-- END IMAGE ONE -->
+<!-- END BOX ONE -->
 
-<!-- START IMAGE TWO -->
-<div id="chatbubbles">
+<!-- START BOX TWO -->
+<div id="Box2">
+<div class="chatbubbles">
 <img src="IMG/chatbubbles.png">
-</div>
-<!-- END IMAGE TWO -->
+</div></div>
+<!-- END BOX TWO -->
 
-<!-- START IMAGE THREE -->
+<!-- START BOX THREE -->
+<div id="Box3">
 <div id="heteronightmare">
 <img src="IMG/heteronightmare.png">
-</div>
-<!-- END IMAGE THREE -->
+</div></div>
+<!-- END BOX THREE -->
 
-<!-- START IMAGE FOUR -->
+<!-- START BOX FOUR -->
+<div id="Box4">
 <div id="queen">
 <img src="IMG/queen.png">
-</div>
-<!-- END IMAGE FOUR -->
+</div></div>
+<!-- END BOX FOUR -->
 
-<!-- START IMAGE FIVE -->
-<div id="twins">
-<img src="IMG/twins.png">
-</div>
-<!-- END IMAGE FIVE -->
 </body>
 </html>
