--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     
     <div id="projects">
       <h3 style="font-family: Courier"><u>🎀 PROJECTS 🎀</u></h3>
-      <a href="presentation/index.html">PRESENTATION</a>
+      <a href="presentation/index.html">PRESENTATION</a><br />
+      <a href="Isolated elements/index.html">TAXONOMY</a>
       
     </div> 
 </div> 
