--- a/Isolated elements/index.html
+++ b/Isolated elements/index.html
@@ -28,17 +28,20 @@
 
 <!-- START BOX THREE -->
 <div id="Box3">
-<div id="heteronightmare">
+<div class="heteronightmare">
 <img src="IMG/heteronightmare.png">
 </div></div>
 <!-- END BOX THREE -->
 
 <!-- START BOX FOUR -->
 <div id="Box4">
-<div id="queen">
+<div class="queen">
 <img src="IMG/queen.png">
 </div></div>
 <!-- END BOX FOUR -->
 
+
+<!-- LINK BACK -->
+<div id="navi"><a href="/interactive1"><small>← BACK</small></a></div>
 </body>
 </html>
