--- a/Isolated elements/index.html
+++ b/Isolated elements/index.html
@@ -11,7 +11,7 @@
 <body>
 <!-- START BOX ONE -->
 <div id="Box1">
-<div class="text"><h1>💖 BOX 1 💖</h1></div>
+<div class="text"><h1>📱</h1></div>
 <div class="abstract">
 <img src="IMG/abstract.jpg"></div>
 <div class="doodle">
@@ -21,6 +21,7 @@
 
 <!-- START BOX TWO -->
 <div id="Box2">
+<h1>🖥</h1>
 <div class="chatbubbles">
 <img src="IMG/chatbubbles.png">
 </div></div>
