--- a/Isolated elements/index.html
+++ b/Isolated elements/index.html
@@ -11,20 +11,43 @@
 <body>
 <!-- START BOX ONE -->
 <div id="Box1">
-<div class="text"><h1>📱</h1></div>
-<div class="abstract">
-<img src="IMG/abstract.jpg"></div>
-<div class="doodle">
-<img src="IMG/doodle.jpg"></div>
+<h1>📱</h1>
+<div class="grindr">
+<img src="IMG/grindr.jpg">
+<p>GRINDR</div><br />
+<div class="instaDM">
+<img src="IMG/instaDM.jpg">
+<p>INSTAGRAM DM</p></div><br />
+<div class="kik">
+<img src="IMG/kik.jpg">
+<p>KIK MESSENGER</p></div><BR />
+<div class="line">
+<img src="IMG/line.jpg">
+<p>LINE</p></div>
+<div class="imessage">
+<img src="IMG/imessage.jpg">
+<p>IMESSAGE</p></div>
 </div>
 <!-- END BOX ONE -->
 
 <!-- START BOX TWO -->
 <div id="Box2">
 <h1>🖥</h1>
-<div class="chatbubbles">
-<img src="IMG/chatbubbles.png">
-</div></div>
+<div class="robotchat">
+<img src="IMG/robotchat.jpg">
+<p>MICROSOFT VIRTUAL SUPPORT ASSISTANT</div><br />
+<div class="chatroom">
+<img src="IMG/palacechatroom.jpg">
+<p>PALACE CHATROOM</p></div><br />
+<div class="twitterDM">
+<img src="IMG/twitterDM.jpg">
+<p>TWITTER DM</p></div><BR />
+<div class="googlehangout">
+<img src="IMG/googlehangout.jpg">
+<p>GOOGLE HANGOUTS</p></div>
+<div class="skype">
+<img src="IMG/skype.jpg">
+<p>SKYPE</p></div></div>
 <!-- END BOX TWO -->
 
 
