--- a/Isolated elements/index.html
+++ b/Isolated elements/index.html
@@ -11,7 +11,7 @@
 <body>
 <!-- START BOX ONE -->
 <div id="Box1">
-<h1>📱</h1>
+<div class="content">
 <div class="grindr">
 <img src="IMG/grindr.jpg">
 <p>GRINDR</div><br />
@@ -26,29 +26,9 @@
 <p>LINE</p></div>
 <div class="imessage">
 <img src="IMG/imessage.jpg">
-<p>IMESSAGE</p></div>
+<p>IMESSAGE</p></div></div>
 </div>
 <!-- END BOX ONE -->
-
-<!-- START BOX TWO -->
-<div id="Box2">
-<h1>🖥</h1>
-<div class="robotchat">
-<img src="IMG/robotchat.jpg">
-<p>MICROSOFT VIRTUAL SUPPORT ASSISTANT</div><br />
-<div class="chatroom">
-<img src="IMG/palacechatroom.jpg">
-<p>PALACE CHATROOM</p></div><br />
-<div class="twitterDM">
-<img src="IMG/twitterDM.jpg">
-<p>TWITTER DM</p></div><BR />
-<div class="googlehangout">
-<img src="IMG/googlehangout.jpg">
-<p>GOOGLE HANGOUTS</p></div>
-<div class="skype">
-<img src="IMG/skype.jpg">
-<p>SKYPE</p></div></div>
-<!-- END BOX TWO -->
 
 
 <!-- LINK BACK -->
