--- a/Isolated elements/index2.html
+++ b/Isolated elements/index2.html
@@ -12,26 +12,31 @@
 <!-- START BOX ONE -->
 <div id="Box1">
 <div class="content">
-<div class="grindr">
-<img src="IMG/grindr.jpg">
-<p>GRINDR</div><br />
-<div class="instaDM">
-<img src="IMG/instaDM.jpg">
-<p>INSTAGRAM DM</p></div><br />
-<div class="kik">
-<img src="IMG/kik.jpg">
-<p>KIK MESSENGER</p></div><BR />
-<div class="line">
-<img src="IMG/line.jpg">
-<p>LINE</p></div>
-<div class="imessage">
-<img src="IMG/imessage.jpg">
-<p>IMESSAGE</p></div></div>
+<div class="tswift1">
+<img src="IMG/tswift1.png"></div><br />
+
+<div class="tswift2">
+<img src="IMG/tswift2.png"></div><br />
+
+<div class="tswift3">
+<img src="IMG/tswift3.png"></div><BR />
+
+<div class="tswift4">
+<img src="IMG/tswift4.png"></div><BR />
+
+<div class="tswift5">
+<img src="IMG/tswift5.png"></div>
+
+<div class="tswift6">
+<img src="IMG/tswift6.png"></div>
+
+<div class="tswift7">
+<img src="IMG/tswift7.png"></div></div>
 </div>
 <!-- END BOX ONE -->
 
 
 <!-- LINK BACK -->
-<div id="navi"><a href="/interactive1"><small>← BACK</small></a></div>
+<div id="navi"><a href="/main"><small>← BACK</small></a></div>
 </body>
 </html>
