--- a/Isolated elements/index.html
+++ b/Isolated elements/index.html
@@ -12,26 +12,40 @@
 <!-- START BOX ONE -->
 <div id="Box1">
 <div class="content">
-<div class="grindr">
-<img src="IMG/grindr.jpg">
-<p>GRINDR</div><br />
-<div class="instaDM">
-<img src="IMG/instaDM.jpg">
-<p>INSTAGRAM DM</p></div><br />
-<div class="kik">
-<img src="IMG/kik.jpg">
-<p>KIK MESSENGER</p></div><BR />
-<div class="line">
-<img src="IMG/line.jpg">
-<p>LINE</p></div>
-<div class="imessage">
-<img src="IMG/imessage.jpg">
-<p>IMESSAGE</p></div></div>
+<div class="chatrobot1">
+<img src="IMG/chatrobot1.png"></div><br />
+
+<div class="chatrobot2">
+<img src="IMG/chatrobot2.png"></div><br />
+
+<div class="chatrobot3">
+<img src="IMG/chatrobot3.png"></div><br />
+
+<div class="chatrobot4">
+<img src="IMG/chatrobot4.png"></div><br />
+
+<div class="chatrobot5">
+<img src="IMG/chatrobot5.png"></div><br />
+
+<div class="chatrobot6">
+<img src="IMG/chatrobot6.png"></div><br />
+
+<div class="chatrobot7">
+<img src="IMG/chatrobot7.png"></div><br />
+
+<div class="chatrobot8">
+<img src="IMG/chatrobot8.png"></div><br />
+
+<div class="chatrobot9">
+<img src="IMG/chatrobot9.png"></div><br />
+
+<div class="chatrobot10">
+<img src="IMG/chatrobot10.png"></div><br /></div>
 </div>
 <!-- END BOX ONE -->
 
 
 <!-- LINK BACK -->
-<div id="navi"><a href="/interactive1"><small>← BACK</small></a></div>
+<div id="navi"><a href="/main"><small>← BACK</small></a></div>
 </body>
 </html>
