--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="projects">
       <h3 style="font-family: Courier"><u>🎀 PROJECTS 🎀</u></h3>
       <a href="presentation/index.html">PRESENTATION</a><br />
-      <a href="Isolated elements/index.html">TAXONOMY</a>
+      <a href="Isolated elements/main.html">TAXONOMY</a>
       
     </div> 
 </div> 
