--- a/Isolated elements/main.html
+++ b/Isolated elements/main.html
@@ -10,7 +10,7 @@
 
 <body>
 <!-- START BOX ONE -->
-<div id="links"><a href="/index.html">🖥</a>   <a href="/index2.html">📱</a></div>
+<div id="links"><a href="/interactive1/Isolated elements/index.html">🖥</a>   <a href="/interactive1/Isolated elements/index2.html">📱</a></div>
 <!-- END BOX ONE -->
 
 
