--- a/Isolated elements/index.html
+++ b/Isolated elements/index.html
@@ -46,6 +46,6 @@
 
 
 <!-- LINK BACK -->
-<div id="navi"><a href="../Isolated elements/main.html"><small>← BACK</small></a></div>
+<div id="navi"><a href="/interactive1/Isolated elements/main.html"><small>← BACK</small></a></div>
 </body>
 </html>
