--- a/Isolated elements/index2.html
+++ b/Isolated elements/index2.html
@@ -37,6 +37,6 @@
 
 
 <!-- LINK BACK -->
-<div id="navi"><a href="../Isolated elements/main.html"><small>← BACK</small></a></div>
+<div id="navi"><a href="/interactive1/Isolated elements/main.html"><small>← BACK</small></a></div>
 </body>
 </html>
