--- a/Isolated elements/index.html
+++ b/Isolated elements/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>UI ELEMENTS!!!</title>
+  <title>www.PleaseDateMe.com</title>
   <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="../CSS/isolatedelements.css">
 
