--- a/Isolated elements/index2.html
+++ b/Isolated elements/index2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>UI ELEMENTS!!!</title>
+  <title>1-800-ILove-TSwift</title>
   <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="../CSS/isolatedelements2.css">
 
