--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <div id="exercises">
       <h3 style="font-family: Courier"><u>🔮 EXERCISES 🔮</u></h3>
       <a href="Creating Taxonomy/index.html">TAXONOMIES</a>
+      <a href="media/index.html">MEDIA</a>
+
     </div>
     
     <div id="projects">
