--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <center><div id="spoiler" style="display:none"> 
 <div id="exercises">
       <h3 style="font-family: Courier"><u>🔮 EXERCISES 🔮</u></h3>
-      <a href="Creating Taxonomy/index.html">TAXONOMIES</a>
+      <a href="Creating Taxonomy/index.html">TAXONOMIES</a><br />
       <a href="media/index.html">MEDIA</a>
 
     </div>
