--- a/Diagram/index.html
+++ b/Diagram/index.html
@@ -4,18 +4,18 @@
 <head>
   <title>Diagram</title>
   <meta charset="utf-8" />
-<link rel="stylesheet" type="text/css" href="../CSS/diagrammain.css">
+<link rel="stylesheet" type="text/css" href="../CSS/tweetsmain.css">
 
 </head>
 
 <body>
-<!-- ARTICLE -->
+<!-- TWEETS -->
 
-<div id="articles">
+<div id="tweets">
 
-<img src="IMG/article1GONE.jpg" />
+<a href="../Diagram/article1.html"><img src="IMG/tweet1.jpg" class="tweet1" /></a>
 
-<img src="IMG/Article1.jpg" class="original" />
+<a href="../Diagram/article2.html"><img src="IMG/tweet2.jpg" class="tweet2" /></a>
 
 
 </div>
