--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <div id="exercises">
       <h3 style="font-family: Courier"><u>🔮 EXERCISES 🔮</u></h3>
       <a href="Creating Taxonomy/index.html">TAXONOMIES</a><br />
-      <a href="media/index.html">MEDIA</a>
+      <a href="media/index.html">MEDIA</a><br />
+      <a href="../Diagram/index.html">TWITTER DIAGRAM</a>
 
     </div>
     
