--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <div id="projects">
       <h3 style="font-family: Courier"><u>🎀 PROJECTS 🎀</u></h3>
       <a href="presentation/index.html">PRESENTATION</a><br />
-      <a href="Isolated elements/main.html">TAXONOMY</a>
+      <a href="Isolated elements/main.html">TAXONOMY</a><br />
+      <a href="../Extension/index.html">EXTENSION</a>
       
     </div> 
 </div> 
