--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h3 style="font-family: Courier"><u>🎀 PROJECTS 🎀</u></h3>
       <a href="presentation/index.html">PRESENTATION</a><br />
       <a href="Isolated elements/main.html">TAXONOMY</a><br />
-      <a href="../Extension/index.html">EXTENSION</a>
+      <a href="Extension/index.html">EXTENSION</a>
       
     </div> 
 </div> 
