--- a/Extension/index.html
+++ b/Extension/index.html
@@ -29,6 +29,6 @@
 
 <!-- LINK BACK -->
 <br />
-<div id="navi"><a href="/interactive1"><small><center>← BACK</center></small></a></div>
+<div id="navi"><a style="color: white" href="/interactive1"><small><center>← BACK</center></small></a></div>
 </body>
 </html>
