--- a/Extension/instructions.html
+++ b/Extension/instructions.html
@@ -22,6 +22,6 @@
 
 <!-- LINK BACK -->
 <br />
-<div id="navi"><a href="../Extension/index.html"><small><center>← BACK</center></small></a></div>
+<div id="navi"><a style="color: white" href="../Extension/index.html"><small><center>← BACK</center></small></a></div>
 </body>
 </html>
