--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <h3 style="font-family: Courier"><u>🔮 EXERCISES 🔮</u></h3>
       <a href="Creating Taxonomy/index.html">TAXONOMIES</a><br />
       <a href="media/index.html">MEDIA</a><br />
-      <a href="Diagram/index.html">TWITTER DIAGRAM</a>
+      <a href="Diagram/index.html">TWITTER DIAGRAM</a><br />
+      <a href="PRIVACY/index.html">PRIVACY</a>
 
     </div>
     
