--- a/PRIVACY/index.html
+++ b/PRIVACY/index.html
@@ -6,11 +6,11 @@
 <body>
 <center>
 <H1></H1>
-<img src="img/contentaware1.jpg" />
+<img src="IMG/contentaware1.jpg" />
 <br />
-<img src="img/contentaware2.jpg" />
+<img src="IMG/contentaware2.jpg" />
 <br />
-<img src="img/contentaware3.jpg" />
+<img src="IMG/contentaware3.jpg" />
 <br />
 <a href="/interactive1"><small>← BACK</small></a>
 </center>
