--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <a href="presentation/index.html">PRESENTATION</a><br />
       <a href="Isolated elements/main.html">TAXONOMY</a><br />
       <a href="Extension/index.html">EXTENSION</a>
+      <br />
+      <a href="Public & Private P3/splash.html">PUBLIC AND PRIVATE</a>
       
     </div> 
 </div> 
