--- a/Public & Private P3/splash.html
+++ b/Public & Private P3/splash.html
@@ -9,7 +9,7 @@
 <body>
 <br />
 <h1><center>lets find some drugs!!</center></h1>
-<div id='illegaldrugs'><center><a href="/index.html"><img src='IMG/illegaldrugs.gif'></a></center></div>
+<div id='illegaldrugs'><center><a href="Public & Private P3/index.html"><img src='IMG/illegaldrugs.gif'></a></center></div>
 
 <br />
 <br />
