--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <a href="Isolated elements/main.html">TAXONOMY</a><br />
       <a href="Extension/index.html">EXTENSION</a>
       <br />
-      <a href="Public & Private P3/splash.html">PUBLIC AND PRIVATE</a>
+      <a href="P3/splash.html">PUBLIC AND PRIVATE</a>
       
     </div> 
 </div> 
